[package]
name = "rfcp"
version = "2.0.0"
edition = "2021"
authors = ["Kasun Ranasingge <kasunranasinghe303@gmail.com>"]
description = "Replacement for cp"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/keaz/rust-copy"
keywords = ["cp", "linux", "copy","file","rsync"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
console = { version = "0.15.7", features = ["ansi-parsing"] }
filetime = "0.2.22"
indicatif = { version = "0.17.6", features = ["improved_unicode"] }
log = "0.4.20"
threadpool = "1.8.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"

